<resources>
    <string name="app_name">MvPdemo</string>
    <string name="text_me_info_name">姓名</string>
    <string name="text_me_info_sex">性别</string>
    <string name="text_me_info_age">年龄</string>
    <string name="text_me_info_desc">签名</string>
    <string name="text_me_info_birthday">生日</string>
    <string name="text_me_info_constellation">星座</string>
    <string name="text_me_info_hobby">爱好</string>
    <string name="text_me_info_status">状态</string>
    <string name="text_me_info_tips">"你好，我是"</string>
</resources>
