<?xml version="1.0" encoding="utf-8"?>
<com.example.mvpdemo.utils.ZoomScroView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@drawable/img_chat_bg_1"
            android:contentDescription="TODO"
            android:id="@+id/user_tou"
            />

        <LinearLayout

            android:layout_marginTop="-60dp"
            android:layout_below="@id/user_tou"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <!--姓名-->
            <LinearLayout
                android:background="@drawable/bg_share"
                android:id="@+id/layout_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_me_info_name"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/et_nickname"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:maxLines="8"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_right_arrow" />

            </LinearLayout>

            <!--性别-->
            <LinearLayout
                android:id="@+id/ll_user_sex"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_me_info_sex"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_user_sex"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_right_arrow" />

            </LinearLayout>

            <!--年龄-->
            <LinearLayout
                android:id="@+id/ll_user_age"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_me_info_age"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_user_age"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_right_arrow" />

            </LinearLayout>

            <!--签名-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_me_info_desc"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/et_user_descS"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:maxLength="24"
                    android:maxLines="3"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_right_arrow" />

            </LinearLayout>
            <!--签名-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_me_info_desc"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/et_user_descE"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:maxLength="24"
                    android:maxLines="3"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_right_arrow" />

            </LinearLayout>
            <!--签名-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_me_info_desc"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/et_user_desc"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:maxLength="24"
                    android:maxLines="3"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_right_arrow" />

            </LinearLayout>
            <!--生日-->
            <LinearLayout
                android:id="@+id/ll_user_birthday"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_me_info_birthday"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_user_birthday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_right_arrow" />

            </LinearLayout>

            <!--星座-->
            <LinearLayout
                android:id="@+id/ll_user_constellation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_me_info_constellation"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_user_constellation"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_right_arrow" />

            </LinearLayout>

            <!--爱好-->
            <LinearLayout
                android:id="@+id/ll_user_hobby"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_me_info_hobby"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_user_hobby"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_right_arrow" />

            </LinearLayout>

            <!--状态-->
            <LinearLayout
                android:id="@+id/ll_user_status"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_me_info_status"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_user_status"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_right_arrow" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
    </LinearLayout>

</com.example.mvpdemo.utils.ZoomScroView>